--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 						<div class="dropdown">
 							<button class="dropbtn">Dropdown</button>
 							<div class="dropdown-content">
-								<a href="#">Link 1</a>
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/VeteranSuicide_16708971210690/Dashboard1">Tableau
+									Dashboard</a>
 								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
@@ -125,7 +127,9 @@
 						<div class="dropdown">
 							<button class="dropbtn">Dropdown</button>
 							<div class="dropdown-content">
-								<a href="#">Link 1</a>
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/FailedUSBanks_16696533902580/Dashboard1">Tableau
+									Dashboard</a>
 								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
@@ -139,7 +143,9 @@
 						<div class="dropdown">
 							<button class="dropbtn">Dropdown</button>
 							<div class="dropdown-content">
-								<a href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock Relational Database</a>
+								<a
+									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock
+									Relational Database</a>
 								<a href="#">Link 2</a>
 								<a href="#">Link 3</a>
 							</div>
