--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<header>
 						<h1><strong>Jacob Couchenour</strong></h1>
 					</header>
-					<p>A highly motivated Data Analyst</p>
+					<p>A highly motivated Data Analyst who transforms data into actionable information.</p>
 					<a href="#portfolio" class="button large scrolly">Check out my projects</a>
 				</div>
 			</div>
@@ -53,16 +53,9 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\JDE.png alt="" /></span>
-						<h3>JD Edwards</h3>
-						<p>-Data Entry <br>-Data Mining <br>-Data Processing</p>
-					</section>
-				</div>
-				<div class="col-4 col-6-medium col-12-small">
-					<section class="box style1">
-						<span><img src=images\excel.jpg alt="" /></span>
-						<h3>Microsoft Excel</h3>
-						<p>-Power Query/Data Cleaning <br> -Pivot Tables & Visualizations <br>-Data Analysis</p>
+						<span><img src=images\T.png alt="" /></span>
+						<h3>Tableau</h3>
+						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
@@ -74,6 +67,13 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
+						<span><img src=images\r.jpg alt="" /></span>
+						<h3>R Programing</h3>
+						<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
 						<span><img src=images\MSSMS.png alt="" /></span>
 						<h3>Microsoft SQL SMS</h3>
 						<p>-Data Cleaning <br> -Querying Relational Tables <br>-Data Analysis</p>
@@ -81,16 +81,16 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\T.png alt="" /></span>
-						<h3>Tableau</h3>
-						<p>-Data Visualizations <br>-Dashboards<br>-Interactive Data Analysis</p>
+						<span><img src=images\excel.jpg alt="" /></span>
+						<h3>Microsoft Excel</h3>
+						<p>-Power Query/Data Cleaning <br> -Pivot Tables & Visualizations <br>-Data Analysis</p>
 					</section>
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\r.jpg alt="" /></span>
-						<h3>R Programing</h3>
-						<p>-Data Cleaning <br> -Data Visualizations <br>-Data Analysis</p>
+						<span><img src=images\JDE.png alt="" /></span>
+						<h3>JD Edwards</h3>
+						<p>-Data Analysis <br>-Data Mining <br>-Data Processing</p>
 					</section>
 				</div>
 			</div>
@@ -109,13 +109,13 @@
 						<span><img src=images\Vet.jpg alt="" /></span>
 						<h3>US Veteran Suicide <br> Case Study</h3>
 						<div class="dropdown">
-							<button class="dropbtn">Dropdown</button>
+							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
 									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/VeteranSuicide_16708971210690/Dashboard1">Tableau
 									Dashboard</a>
-								<a href="#">Link 2</a>
-								<a href="#">Link 3</a>
+								<!--<a href="#">Link 2</a>
+								<a href="#">Link 3</a>-->
 							</div>
 						</div>
 					</section>
@@ -125,13 +125,13 @@
 						<span><img src=images\banks.jpg alt="" /></span>
 						<h3>United States Failed <br> Banks</h3>
 						<div class="dropdown">
-							<button class="dropbtn">Dropdown</button>
+							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
 									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/FailedUSBanks_16696533902580/Dashboard1">Tableau
 									Dashboard</a>
-								<a href="#">Link 2</a>
-								<a href="#">Link 3</a>
+								<!--<a href="#">Link 2</a>
+								<a href="#">Link 3</a>-->
 							</div>
 						</div>
 					</section>
@@ -141,13 +141,13 @@
 						<span><img src=images\SQL.jpg alt="" /></span>
 						<h3>SQL Data <br>Manipulation</h3>
 						<div class="dropdown">
-							<button class="dropbtn">Dropdown</button>
+							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
 									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock
 									Relational Database</a>
-								<a href="#">Link 2</a>
-								<a href="#">Link 3</a>
+								<!--<a href="#">Link 2</a>
+								<a href="#">Link 3</a>-->
 							</div>
 						</div>
 				</div>
