--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@
 								<a
 									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock
 									Relational Database</a>
-								<!--<a href="#">Link 2</a>
-								<a href="#">Link 3</a>-->
+								<a href="https://www.youtube.com/watch?v=fz2DsOmlbKQ">Import .CSV<br>&<br> Query
+									Tutorial 2</a>
+								<!--<a href="#">Link 3</a>-->
 							</div>
 						</div>
 				</div>
