--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock
 									Relational Database</a>
 								<a href="https://www.youtube.com/watch?v=fz2DsOmlbKQ">Import .CSV<br>&<br> Query
-									Tutorial 2</a>
+									Tutorial</a>
 								<!--<a href="#">Link 3</a>-->
 							</div>
 						</div>
