--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 								<a
 									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock
 									Relational Database</a>
-								<a href="https://www.youtube.com/watch?v=fz2DsOmlbKQ">Import .CSV<br>&<br> Query
+								<a href="https://www.youtube.com/watch?v=fz2DsOmlbKQ">Import .CSV<br>&<br>Query Video
 									Tutorial</a>
 								<!--<a href="#">Link 3</a>-->
 							</div>
