--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<section class="box style1">
 						<span><img src=images\JDE.png alt="" /></span>
 						<h3>JD Edwards</h3>
-						<p>-Data Analysis <br>-Data Mining <br>-Data Processing</p>
+						<p>-Data Processing <br>-Data Mining <br>-Data Analysis</p>
 					</section>
 				</div>
 			</div>
@@ -144,10 +144,12 @@
 							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
-									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Mock
+									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Create/Query<br>
 									Relational Database</a>
-								<a href="https://www.youtube.com/watch?v=fz2DsOmlbKQ">Import .CSV<br>&<br>Query Video
-									Tutorial</a>
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/TripsToMarylandDunkinLocations/Dashboard1?publish=yes">Dashboard
+									Map<br>With Links To<br>Query Tutorial
+								</a>
 								<!--<a href="#">Link 3</a>-->
 							</div>
 						</div>
