Christmas Eve Spotify Dashboard Update

--- a/index.html
+++ b/index.html
@@ -123,15 +123,17 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span><img src=images\Sales_DB.png alt="" /></span>
-						<h3>-Interactive Sales<br>Dashboard</h3>
+						<h3>Interactive<br>Dashboards</h3>
 						<div class="dropdown">
 							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SalesAnalysisDashboard_16713145491250/Dashboard1">Tableau
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyUserDataDashboard/Dashboard1">Spotify
 									Dashboard</a>
-								<!--<a href="#">Link 2</a>
-								<a href="#">Link 3</a>-->
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SalesAnalysisDashboard_16713145491250/Dashboard1">Sales
+									Dashboard</a>
+								<!--<a href="#">Link 3</a>-->
 							</div>
 						</div>
 					</section>
