--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 			<div class="row aln-center">
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
-						<span><img src=images\Vet.jpg alt="" /></span>
-						<h3>US Veteran Suicide <br> Case Study</h3>
+						<span><img src=images\Spotipy.jpg alt="" /></span>
+						<h3>Spotify User Data<br> Case Study</h3>
 						<div class="dropdown">
 							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/UnitedStatesVeteranSuicides/VeteranSuicideRate">Tableau
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyUserDataDashboard/Dashboard1">Spotify
 									Dashboard</a>
 								<!--<a href="#">Link 2</a>
 								<a href="#">Link 3</a>-->
@@ -128,12 +128,20 @@
 							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyUserDataDashboard/Dashboard1">Spotify
-									Dashboard</a>
-								<a
 									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SalesAnalysisDashboard_16713145491250/Dashboard1">Sales
 									Dashboard</a>
-								<!--<a href="#">Link 3</a>-->
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/UnitedStatesVeteranSuicides/VeteranSuicideRate">Veteran
+									Suicide <br>By State Dashboard</a>
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/TripsToMarylandDunkinLocations/Dashboard1">WV/MD
+									Dunkin'<br>location Dashboard</a>
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/FailedUSBanks_16696533902580/Dashboard1">Failed
+									Banks<br>Dashboard</a>
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyUserDataDashboard/Dashboard1">Spotify
+									Dashboard</a>
 							</div>
 						</div>
 					</section>
@@ -148,10 +156,7 @@
 								<a
 									href="https://github.com/CouchenourJake/SQL/blob/main/Mock_Oil%26Gas_Sales_Database.sql">Create/Query<br>
 									Relational Database</a>
-								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/TripsToMarylandDunkinLocations/Dashboard1?publish=yes">Dashboard
-									Map<br>With Links To<br>Query Tutorial
-								</a>
+								<!--<a href="#">Link 3</a>-->
 								<!--<a href="#">Link 3</a>-->
 							</div>
 						</div>
