--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
 							<button class="dropbtn">Menu</button>
 							<div class="dropdown-content">
 								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyUserDataDashboard/Dashboard1">Spotify
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyUserDataDashboard/TopArtistDashboard">Spotify
 									Dashboard</a>
-								<!--<a href="#">Link 2</a>
-								<a href="#">Link 3</a>-->
+								<a href="https://www.youtube.com/watch?v=41YsSxg7dzU">Importing/Cleaning<br>JSON
+									Tutorial</a>
+								<!--<a href="#">Link 3</a>-->
 							</div>
 						</div>
 					</section>
