--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 									Dashboard</a>
 								<a href="https://www.youtube.com/watch?v=41YsSxg7dzU">Importing/Cleaning<br>JSON
 									Tutorial</a>
-								<!--<a href="#">Link 3</a>-->
+								<a
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyStory_16721611023800/Conclusion?publish=yes">Story</a>
 							</div>
 						</div>
 					</section>
