--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<a href="https://www.youtube.com/watch?v=41YsSxg7dzU">Importing/Cleaning<br>JSON
 									Tutorial</a>
 								<a
-									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyStory_16721611023800/Conclusion?publish=yes">Story</a>
+									href="https://public.tableau.com/app/profile/jacob.couchenour/viz/SpotifyStory_16721611023800/Jakes2022MusicData">Story</a>
 							</div>
 						</div>
 					</section>
